--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
   "dependencies": {
     "@popperjs/core": "^2.9.1",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.0-beta3",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "vee-validate": "^4.2.4",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.4",
-    "vue-recaptcha-v3": "^2.0.0",
-    "vue-router": "^4.0.0-0",
+    "vue-router": "^4.0.6",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
