--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^27.0.0",
+    "@ckeditor/ckeditor5-vue": "^2.0.1",
     "@popperjs/core": "^2.9.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
